--- a/pythonTutorials.ipynb
+++ b/pythonTutorials.ipynb
@@ -9,9 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "3 4 5 3.2\n",
+      "False\n",
+      "<class 'complex'>\n",
+      "10\n",
+      "10.0\n",
+      "5.0\n",
+      "0b110010\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "#DataTypes\n",
     "a=5\n",
@@ -615,6 +631,95 @@
     "print(a.intersection(h))\n",
     "print(a^h) # lmtkrr mesh hy3rdo\n",
     "print(a-h)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100, 11: 121, 12: 144, 13: 169, 14: 196, 15: 225, 16: 256, 17: 289, 18: 324, 19: 361}\n",
+      "1\n",
+      "True\n",
+      "True\n",
+      "10\n",
+      "55\n",
+      "{'merna': 10, 'karim': 2, 'shahen': 3, 'mayar': 4, 'mohamed': 60}\n",
+      "{'karim': 2, 'shahen': 3, 'mayar': 4, 'mohamed': 60}\n",
+      "{}\n",
+      "20\n",
+      "{'merna': 10, 'karim': 2, 'shahen': 3, 'mayar': 4}\n",
+      "{1: None, 2: None, 3: None, 4: None, 5: None}\n",
+      "{'merna': (1, 2)}\n",
+      "dict_keys(['merna'])\n",
+      "dict_values([(1, 2)])\n",
+      "2\n",
+      "{}\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-36-2067b064fff3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdic2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     39\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "d={'merna':1,'karim':2,'shahen':3,'mayar':4}\n",
+    "f={n:n**2 for n in range(20)}\n",
+    "print(f)\n",
+    "print(d['merna'])\n",
+    "d['merna']=10\n",
+    "dic=d.copy()\n",
+    "s=('merna' in d)\n",
+    "print(s)\n",
+    "print((10 in d.values())) #search in values\n",
+    "print(d.get('merna'))\n",
+    "print(d.get('mern',55)) #lw mfesh mern ytl3 55\n",
+    "d['mohamed']=60 # adding\n",
+    "print(d)\n",
+    "del (d['merna'])\n",
+    "print(d)\n",
+    "d.clear()\n",
+    "print(d)\n",
+    "del(d)# atmsa7 5ales\n",
+    "print(len(f))\n",
+    "print(dic)\n",
+    "set1={1,2,3,4,5}\n",
+    "dic=dict.fromkeys(set1) # a7walha l dic\n",
+    "print(dic)\n",
+    "\n",
+    "#tuple=tuple(dic.keys())\n",
+    "#print(tuple)\n",
+    "#all=set(f.items())\n",
+    "#print(all)\n",
+    "dic2={'merna':(1,2)} #values of tuples\n",
+    "print(dic2)\n",
+    "print(dic2.keys())\n",
+    "print(dic2.values())\n",
+    "print(dic2['merna'][1])\n",
+    "del(dic2['merna'])\n",
+    "print(dic2)\n",
+    "\n",
+    "\n",
+    "b = list(dic2.values())\n",
+    "print(b)"
    ]
   },
   {
