Updated with Statistics and Random Library

--- a/pythonTutorials.ipynb
+++ b/pythonTutorials.ipynb
@@ -438,8 +438,8 @@
     "from operator import itemgetter\n",
     "from operator import methodcaller#shwayatoperations\n",
     "a=[\"ahmed\",\"ali\",\"mohamed\",20,False,36.3] #different dataTypes can be modified ->List\n",
-    "b={\"ahmed\",\"mohamed\",20} #cant be modified ->tuple\n",
-    "c=(\"ali\",\"ahmed\",20) #no duplication ->sets\n",
+    "b={\"ahmed\",\"mohamed\",20} #no duplication ->sets\n",
+    "c=(\"ali\",\"ahmed\",20) #cant be modified ->tuple\n",
     "print(a)\n",
     "f=[\"ahmed\",[1,2,3,4,5]] #list inlist\n",
     "print(f)\n",
@@ -715,19 +715,166 @@
     "print(dic2.values())\n",
     "print(dic2['merna'][1])\n",
     "del(dic2['merna'])\n",
-    "print(dic2)\n",
-    "\n",
-    "\n",
-    "b = list(dic2.values())\n",
-    "print(b)"
+    "print(dic2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Control Operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n",
+      "0  hi\n",
+      "1  hi\n",
+      "2  hi\n",
+      "3  hi\n",
+      "4  hi\n",
+      "5  hi\n",
+      "6  hi\n",
+      "7  hi\n",
+      "8  hi\n",
+      "9  hi\n",
+      "0  hi\n",
+      "2  hi\n",
+      "4  hi\n",
+      "6  hi\n",
+      "8  hi\n",
+      "[(0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (0, 8), (0, 9), (1, 2), (1, 3), (1, 4), (1, 5), (1, 6), (1, 7), (1, 8), (1, 9), (2, 3), (2, 4), (2, 5), (2, 6), (2, 7), (2, 8), (2, 9), (3, 4), (3, 5), (3, 6), (3, 7), (3, 8), (3, 9), (4, 5), (4, 6), (4, 7), (4, 8), (4, 9), (5, 6), (5, 7), (5, 8), (5, 9), (6, 7), (6, 8), (6, 9), (7, 8), (7, 9), (8, 9)]\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "m\n",
+      "e\n",
+      "r\n",
+      "n\n",
+      "a\n",
+      "merna\n",
+      "ali\n",
+      "ahmed\n",
+      "('merna', 1)\n",
+      "('ali', 2)\n",
+      "('ahmed', 3)\n",
+      "merna   1\n",
+      "ali   2\n",
+      "ahmed   3\n",
+      "0   1\n",
+      "1   2\n",
+      "2   3\n",
+      "3   4\n",
+      "4   5\n",
+      "1   Ali\n",
+      "2   ahmed\n",
+      "3   m\n",
+      "4   a\n",
+      "[0, 5]\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "hi\n",
+      "190\n",
+      "2.9289682539682538\n",
+      "[0, 3, 12, 27, 48, 75, 108, 147, 192, 243]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#if boolean :\n",
+    "x=5\n",
+    "y=2\n",
+    "if x==5:\n",
+    "    print(x*2)\n",
+    "elif x==2:\n",
+    "    print(x)\n",
+    "else:\n",
+    "    print(x+2)\n",
+    "\n",
+    "if x==5  and y==2:\n",
+    "    print(x*2)\n",
+    "elif x==2:\n",
+    "    print(x)\n",
+    "else:\n",
+    "    print(x+2)\n",
+    "#for loop\n",
+    "# for range:\n",
+    "for k in range(10):\n",
+    "    print(k,' hi')\n",
+    "for k in range(0,10,2):\n",
+    "    print(k,' hi')\n",
+    "f=[(x,y)for x in range (10) for y in range (10) if x<y]\n",
+    "print(f)\n",
+    "s=\"merna\"\n",
+    "\n",
+    "list=[1,2,3,4,5]\n",
+    "l=0\n",
+    "for l in list:\n",
+    "    print(l)\n",
+    "s=\"merna\"\n",
+    "for i in s:\n",
+    "    print(i)\n",
+    "dic={'merna':1,\"ali\":2,\"ahmed\":3}\n",
+    "for i in dic:\n",
+    "    print(i)\n",
+    "for i in dic.items():\n",
+    "    print(i)\n",
+    "for i,j in dic.items():\n",
+    "    print(i,\" \",j)\n",
+    "for x,y in enumerate (list): #yrkam llist\n",
+    "    print(x,\" \",y)\n",
+    "list=[1,2,3,4]\n",
+    "list2=[\"Ali\",\"ahmed\",\"m\",\"a\"]\n",
+    "for x,y in zip (list,list2): #kol wa7ed m3 elii osada fe list tanya\n",
+    "    print(x,\" \",y)\n",
+    "a=[i for i in range(10) if i%5==0]\n",
+    "print (a)\n",
+    "\n",
+    "for x in range (10):\n",
+    "    print(x)\n",
+    "else:\n",
+    "     print(\"hi\") # awal ma y5las yd5olmra wa7da\n",
+    "print(sum([k for k in range(20)]))\n",
+    "print(sum([1/k for k in range(1,11)]))\n",
+    "a = [3*x for x in [y**2 for y in range(10)]] # solve 0 1 4 8 then *3\n",
+    "print(a)\n",
+    "#while\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input()"
+   ]
   },
   {
    "cell_type": "code",
