--- a/Python Tutorials 3.ipynb
+++ b/Python Tutorials 3.ipynb
@@ -950,6 +950,312 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# numpy with files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(b'M', 1.82) (b'M', 1.77) (b'F', 1.68) (b'M', 1.72) (b'F', 1.78)\n",
+      " (b'F', 1.6 ) (b'M', 1.72) (b'M', 1.83) (b'F', 1.56) (b'F', 1.64)\n",
+      " (b'M', 1.63) (b'M', 1.67) (b'M', 1.66) (b'F', 1.59) (b'F', 1.7 )\n",
+      " (b'M', 1.97) (b'F', 1.66) (b'F', 1.63) (b'M', 1.69)]\n",
+      "[1890. 1900. 1910. 1920. 1930.]\n",
+      "[26.1 25.9 25.1 24.6 24.3]\n",
+      "[22.  21.9 21.6 21.2 21.3]\n",
+      "[(1, b'F', 18.72, 31.11) (2, b'F', 21.14, 52.47) (3, b'F', 19.38, 33.9 )]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fname = 'merna.txt'\n",
+    "dtype1 = dtype([('gender', '|S1'), ('height', 'f8')])\n",
+    "a = loadtxt(fname, dtype=dtype1, skiprows=9, usecols=(1,3))\n",
+    " \n",
+    "print(a)\n",
+    "a,b,c = loadtxt('fil.txt', unpack=True,skiprows=3)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "data = genfromtxt('fil2.txt', skip_header=1,\n",
+    "                  dtype=[('student','u8'),\n",
+    "                         ('gender','S1'),('black','f8'),\n",
+    "                         ('colour','f8')],delimiter=',',\n",
+    "                         missing_values='X')\n",
+    "\n",
+    "print(data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Polynomial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "poly([ 5.5 -4.5])\n",
+      " \n",
+      "-7\n",
+      "-------------------------\n",
+      " \n",
+      "-7 x + 2\n",
+      "-------------------------\n",
+      "    2\n",
+      "-7 x + 2 x + 1\n",
+      "-------------------------\n",
+      "    3     2\n",
+      "-7 x + 2 x + 1 x + 3\n",
+      "    4     3     2\n",
+      "-7 x + 2 x + 1 x + 3 x + 6\n",
+      "-------------------------\n",
+      "-4079\n",
+      "-------------------------\n",
+      "6\n",
+      "-------------------------\n",
+      "-360939\n",
+      "4\n",
+      "-------------------------\n",
+      "66\n",
+      "-------------------------\n",
+      "-13\n",
+      "-------------------------\n",
+      "29738.769599999992\n",
+      " \n",
+      "2 x + 2\n",
+      "-------------------------\n",
+      " \n",
+      "2\n",
+      "-------------------------\n",
+      " \n",
+      "0\n",
+      "-------------------------\n",
+      "   3     2\n",
+      "4 x + 6 x + 6 x + 5\n",
+      "-------------------------\n",
+      " \n",
+      "24 x + 12\n",
+      "6\n",
+      "-------------------------\n",
+      "2\n",
+      "-------------------------\n",
+      "0.0\n",
+      "-------------------------\n",
+      "1\n",
+      "-------------------------\n",
+      "132\n",
+      "        3     2\n",
+      "0.3333 x + 1 x + 3 x\n",
+      "-------------------------\n",
+      "         4          3       2\n",
+      "0.08333 x + 0.3333 x + 1.5 x\n",
+      "-------------------------\n",
+      "         5           4       3\n",
+      "0.01667 x + 0.08333 x + 0.5 x\n",
+      "-------------------------\n",
+      "     5       4     3       2\n",
+      "0.2 x + 0.5 x + 1 x + 2.5 x + 12 x\n",
+      "-------------------------\n",
+      "          7           6        5          4     3\n",
+      "0.004762 x + 0.01667 x + 0.05 x + 0.2083 x + 2 x\n",
+      "12.666666666666666\n",
+      "-------------------------\n",
+      "0.0\n",
+      "-------------------------\n",
+      "24.300000000000004\n",
+      "-------------------------\n",
+      "-10.2\n",
+      "-------------------------\n",
+      "1168.8988095238094\n",
+      "[-2.]\n",
+      "-------------------------\n",
+      "[-1.+1.41421356j -1.-1.41421356j]\n",
+      "-------------------------\n",
+      "[-1.84373428+0.j         -0.07813286+1.64492638j -0.07813286-1.64492638j]\n",
+      "-------------------------\n",
+      "[-1.61635728+1.15083694j -1.61635728-1.15083694j  0.61635728+1.63342631j\n",
+      "  0.61635728-1.63342631j]\n",
+      "-------------------------\n",
+      "[ 0.98732723+1.53502015j  0.98732723-1.53502015j -1.06743101+1.56536107j\n",
+      " -1.06743101-1.56536107j -1.83979245+0.j        ]\n",
+      "[3 6 2 5 4]\n",
+      "-------------------------\n",
+      "[ 2.   3.  -9.   6.   2.5]\n",
+      "-------------------------\n",
+      "[ -1.78571429  17.08571429 -35.3       ]\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "Polynomial = np.polynomial.Polynomial\n",
+    "\n",
+    "X= np.array([0,20,40,60,80,100,120,140,160,180])\n",
+    "Y= np.array([10,9,8,7,6,5,4,3,2,1])\n",
+    "\n",
+    "points,stats = Polynomial.fit(X,Y,1,full=True) #y study w ygeb best fit w aktab l degree bta3ha\n",
+    "\n",
+    "print(points)\n",
+    "#azayaktab lmo3dla\n",
+    "a = poly1d((-7))\n",
+    "b = poly1d((-7,2))\n",
+    "c = poly1d((-7,2,1))\n",
+    "d = poly1d((-7,2,1,3))\n",
+    "e = poly1d((-7,2,1,3,6))\n",
+    "\n",
+    "\n",
+    "print(a)\n",
+    "print('-------------------------')\n",
+    "print(b)\n",
+    "print('-------------------------')\n",
+    "print(c)\n",
+    "print('-------------------------')\n",
+    "print(d)\n",
+    "#azay a3wad feha\n",
+    "a = poly1d((-7,2,1,3,6))\n",
+    "\n",
+    "b=a(5)\n",
+    "c=a(0)\n",
+    "d=a(-15)\n",
+    "\n",
+    "print(a)\n",
+    "print('-------------------------')\n",
+    "print(b)\n",
+    "print('-------------------------')\n",
+    "print(c)\n",
+    "print('-------------------------')\n",
+    "print(d)\n",
+    "#ktaba w t3wed m3 b3d\n",
+    "a = polyval((1,2),2)\n",
+    "b = polyval((1,2,3),7)\n",
+    "c = polyval((1,2,3,5),-3)\n",
+    "d = polyval((1,2,3,5,-6),12.6)\n",
+    "\n",
+    "\n",
+    "print(a)\n",
+    "print('-------------------------')\n",
+    "print(b)\n",
+    "print('-------------------------')\n",
+    "print(c)\n",
+    "print('-------------------------')\n",
+    "print(d)\n",
+    "#derivative\n",
+    "a =polyder(poly1d((1,2,3)))\n",
+    "b =polyder(poly1d((1,2,3)),2)\n",
+    "c =polyder(poly1d((1,2,3)),3)# 3 kam mara\n",
+    "\n",
+    "d =polyder(poly1d((1,2,3,5,12)))\n",
+    "e =polyder(poly1d((1,2,3,5,12)),3)\n",
+    "\n",
+    "print(a)\n",
+    "print('-------------------------')\n",
+    "print(b)\n",
+    "print('-------------------------')\n",
+    "print(c)\n",
+    "print('-------------------------')\n",
+    "print(d)\n",
+    "print('-------------------------')\n",
+    "print(e)\n",
+    "a =polyder(poly1d((1,2,3)))\n",
+    "b =polyder(poly1d((1,2,3)),2)\n",
+    "c =polyder(poly1d((1,2,3)),3)\n",
+    "\n",
+    "d =polyder(poly1d((1,2,3,5,12)))\n",
+    "e =polyder(poly1d((1,2,3,5,12)),3)\n",
+    "\n",
+    "print(a(2))\n",
+    "print('-------------------------')\n",
+    "print(b(0)) #a3wad fe ashtkak\n",
+    "print('-------------------------')\n",
+    "print(c(3))\n",
+    "print('-------------------------')\n",
+    "print(d(-1))\n",
+    "print('-------------------------')\n",
+    "print(e(5))\n",
+    "#integration\n",
+    "a =polyint(poly1d((1,2,3)))\n",
+    "b =polyint(poly1d((1,2,3)),2)\n",
+    "c =polyint(poly1d((1,2,3)),3)\n",
+    "\n",
+    "d =polyint(poly1d((1,2,3,5,12)))\n",
+    "e =polyint(poly1d((1,2,3,5,12)),3)\n",
+    "\n",
+    "print(a)\n",
+    "print('-------------------------')\n",
+    "print(b)\n",
+    "print('-------------------------')\n",
+    "print(c)\n",
+    "print('-------------------------')\n",
+    "print(d)\n",
+    "print('-------------------------')\n",
+    "print(e)\n",
+    "a =polyint(poly1d((1,2,3)))\n",
+    "b =polyint(poly1d((1,2,3)),2)\n",
+    "c =polyint(poly1d((1,2,3)),3)\n",
+    "\n",
+    "d =polyint(poly1d((1,2,3,5,12)))\n",
+    "e =polyint(poly1d((1,2,3,5,12)),3)\n",
+    "\n",
+    "print(a(2))\n",
+    "print('-------------------------')\n",
+    "print(b(0))\n",
+    "print('-------------------------')\n",
+    "print(c(3))\n",
+    "print('-------------------------')\n",
+    "print(d(-1))\n",
+    "print('-------------------------')\n",
+    "print(e(5))\n",
+    "#roots l equation elii y5leha 0\n",
+    "a =roots(poly1d((1,2)))\n",
+    "b =roots(poly1d((1,2,3)))\n",
+    "c =roots(poly1d((1,2,3,5)))\n",
+    "d =roots(poly1d((1,2,3,5,12)))\n",
+    "e =roots(poly1d((1,2,3,5,12,22)))\n",
+    "\n",
+    "\n",
+    "print(a)\n",
+    "print('-------------------------')\n",
+    "print(b)\n",
+    "print('-------------------------')\n",
+    "print(c)\n",
+    "print('-------------------------')\n",
+    "print(d)\n",
+    "print('-------------------------')\n",
+    "print(e)\n",
+    "#zy l fit\n",
+    "x = array([3,6,2,5,4])\n",
+    "y = array([2,3,-9,6,2.5])\n",
+    "z = polyfit(x, y, 2)\n",
+    "\n",
+    "\n",
+    "print(x)\n",
+    "print('-------------------------')\n",
+    "print(y)\n",
+    "print('-------------------------')\n",
+    "print(z)\n",
+    "print('-------------------------')\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
