--- a/PythonTutorials 4.ipynb
+++ b/PythonTutorials 4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -22,6 +22,7 @@
       "3    4.1\n",
       "dtype: float64\n",
       "RangeIndex(start=0, stop=4, step=1)\n",
+      "------------\n",
       "0    1\n",
       "1    2\n",
       "2    3\n",
@@ -85,6 +86,7 @@
     "data=pd.Series([1.3,2.4,3.2,4.1]) #lzam gwaha list or tuples\n",
     "print(data)\n",
     "print(data.index)\n",
+    "print(\"------------\")\n",
     "data=pd.Series((1,2,3,4)) #lzam gwaha list or tuples\n",
     "print(data)\n",
     "print(data.values)\n",
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +248,7 @@
       "   French       15\n",
       "   Chemistry    20\n",
       "dtype: int64\n",
-      "------------\n",
+      "------iloc------\n",
       "   Math  Physics\n",
       "a     1        6\n",
       "b     2        7\n",
@@ -272,7 +274,32 @@
       "b     2        7      12         17\n",
       "c     3        8      13         18\n",
       "d     4        9      14         19\n",
-      "e     5       10      15         20\n"
+      "e     5       10      15         20\n",
+      "Math          5\n",
+      "Physics      10\n",
+      "French       15\n",
+      "Chemistry    20\n",
+      "dtype: int64\n",
+      "Math          1\n",
+      "Physics       6\n",
+      "French       11\n",
+      "Chemistry    16\n",
+      "dtype: int64\n",
+      "Math          3.0\n",
+      "Physics       8.0\n",
+      "French       13.0\n",
+      "Chemistry    18.0\n",
+      "dtype: float64\n",
+      "Math         1.581139\n",
+      "Physics      1.581139\n",
+      "French       1.581139\n",
+      "Chemistry    1.581139\n",
+      "dtype: float64\n",
+      "------------\n",
+      "5\n",
+      "11\n",
+      "8.0\n",
+      "1.5811388300841898\n"
      ]
     }
    ],
@@ -309,8 +336,8 @@
     "print(55 in grades.values)\n",
     "print(\"----------\")\n",
     "print(grades.stack()) #yfokha kol wa7ed lwa7do\n",
-    "print(\"------------\")\n",
-    "print(grades.iloc[:3, :2])#location b index\n",
+    "print(\"------iloc------\")\n",
+    "print(grades.iloc[:3, :2])#location b index : mn l awal\n",
     "print(grades.loc['b':'c', 'Math':]) #b esm\n",
     "print(grades.loc[grades.Math >3]) #aktab gwa condition\n",
     "print(grades.loc[grades.Math >3,['French' ,'Math']]) #b condition bs french w math bs\n",
@@ -327,6 +354,145 @@
     "print(grades['French'].min())\n",
     "print(grades['Physics'].mean())\n",
     "print(grades['Chemistry'].std())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          A         B         C\n",
+      "0  0.118502  0.335241  0.779074\n",
+      "1  0.463830  0.150680  0.989554\n",
+      "2  0.501506  0.421618  0.002685\n",
+      "3  0.143951  0.794140  0.776239\n",
+      "4  0.713653  0.652623  0.842755\n",
+      "          A        B         C\n",
+      "A  1.000000 -0.05031 -0.128847\n",
+      "B -0.050310  1.00000 -0.046760\n",
+      "C -0.128847 -0.04676  1.000000\n",
+      "A    0.053837\n",
+      "B    0.108908\n",
+      "C   -1.945872\n",
+      "dtype: float64\n",
+      "   square\n",
+      "0       0\n",
+      "1       1\n",
+      "2       4\n",
+      "3       9\n",
+      "4      16\n",
+      "5      25\n",
+      "6      36\n",
+      "7      49\n",
+      "8      64\n",
+      "9      81\n",
+      "   cube      root  square\n",
+      "0     0  0.000000       0\n",
+      "1     1  1.000000       1\n",
+      "2     8  1.414214       4\n",
+      "3    27  1.732051       9\n",
+      "4    64  2.000000      16\n",
+      "5   125  2.236068      25\n",
+      "6   216  2.449490      36\n",
+      "7   343  2.645751      49\n",
+      "8   512  2.828427      64\n",
+      "9   729  3.000000      81\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(np.random.rand(5, 3), columns=['A', 'B', 'C']) #5x3\n",
+    "print(df)\n",
+    "print(df.corr())# 3lakatl arkam bb3d 1 kol ma hya 2oryba -1 kolma b3eda\n",
+    "print(df.skew())#elan7raf\n",
+    "import pandas as pd\n",
+    "data = [{'square': i**2} for i in range(10)]\n",
+    "d = pd.DataFrame(data)\n",
+    "print(d)\n",
+    "data = [{'square': i**2,'cube': i**3,'root': i**0.5} for i in range(10)]\n",
+    "d = pd.DataFrame(data)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   a  b\n",
+      "0  1  2\n",
+      "1  3  4\n",
+      "2  5  6\n",
+      "     a    b    c    d    e\n",
+      "0  1.0  2.0  NaN  NaN  NaN\n",
+      "1  NaN  3.0  4.0  NaN  NaN\n",
+      "2  NaN  NaN  NaN  5.0  6.0\n",
+      "   Math  Physics  French  Chemistry  Total\n",
+      "a     1        6      11         16   0.34\n",
+      "b     2        7      12         17   0.38\n",
+      "c     3        8      13         18   0.42\n",
+      "d     4        9      14         19   0.46\n",
+      "e     5       10      15         20   0.50\n",
+      "---------\n",
+      "          A         B         C\n",
+      "0  0.769049  0.338904  0.930488\n",
+      "1  0.353703  0.609306  0.256274\n",
+      "2  0.323726  0.449442  0.227486\n",
+      "3  0.736052  0.137880  0.420326\n",
+      "4  0.239068  0.934288  0.632595\n",
+      "0   -15.938988\n",
+      "1    -1.294846\n",
+      "2    -1.000847\n",
+      "3    -1.507629\n",
+      "4    -3.193637\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = pd.DataFrame([{'a':1,'b':2},{'a':3,'b':4},{'a':5,'b':6}])\n",
+    "print(d)\n",
+    "d = pd.DataFrame([{'a':1,'b':2},{'b':3,'c':4},{'d':5,'e':6}])\n",
+    "print(d)\n",
+    "w = pd.Series({'a':1 ,'b':2 ,'c':3 ,'d':4 ,'e':5})\n",
+    "x = pd.Series({'a':6 ,'b':7 ,'c':8 ,'d':9 ,'e':10})\n",
+    "y = pd.Series({'a':11 ,'b':12 ,'c':13 ,'d':14 ,'e':15})\n",
+    "z = pd.Series({'a':16 ,'b':17 ,'c':18 ,'d':19 ,'e':20})\n",
+    "grades = pd.DataFrame({'Math':w,'Physics':x,'French':y,'Chemistry':z})\n",
+    "grades['Total'] = (grades['Math'] + grades['French'] #3amal 3mod gded\n",
+    "+grades['Chemistry']+ grades['Physics']) /100\n",
+    "print(grades)\n",
+    "print(\"---------\")\n",
+    "df = pd.DataFrame(np.random.rand(5, 3), columns=['A', 'B', 'C'])\n",
+    "result = (df['A'] + df['B']) / (df['C'] - 1)\n",
+    "print(df)\n",
+    "print(result)\n",
+    "print(\"---shakl tani----\")\n",
+    "df = pd.DataFrame(np.random.rand(5, 3), columns=['A', 'B', 'C'])\n",
+    "result = pd.eval(\"(df.A + df.B) / (df.C - 1)\")\n",
+    "print(df)\n",
+    "print(result)\n",
+    "print(\"------\")\n",
+    "df = pd.DataFrame(np.random.rand(5, 3), columns=['A', 'B', 'C'])\n",
+    "result = df.query('A < 0.5 and B < 0.5')\n",
+    "print(df)\n",
+    "print(result)\n",
+    "print(\"same\")\n",
+    "df = pd.DataFrame(np.random.rand(5, 3), columns=['A', 'B', 'C'])\n",
+    "tmp1 = df.A < 0.5\n",
+    "tmp2 = df.B < 0.5\n",
+    "tmp3 = tmp1 & tmp2\n",
+    "result = df[tmp3]\n",
+    "print(df)\n",
+    "print(result)\n"
    ]
   },
   {
