--- a/TensorFlow.ipynb
+++ b/TensorFlow.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "TensorFlow.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,6 +22,36 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/mernaadell/Python/blob/master/TensorFlow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PvKgD94J3OBY",
+        "colab_type": "text"
+      },
+      "source": [
+        "tensor k2nha matrix dim wa7ed aw atnen etc\n",
+        "flow hwa l graph elii bykon feh l 3mlyat l 7sabya\n",
+        "tensorflow l graph elii bydom l matrices\n",
+        "edges hya l tensors->kmayat l bynant\n",
+        "nodes->3mlya 7sabya gdeda\n",
+        "edges+nodes\n",
+        "rank->mmkn tkon 0 da rkam lwa7do\n",
+        "mmkn 1 w da vector\n",
+        "mmkn rank 2 2d matrix\n",
+        "session-> l code mesh hynfa3 ysht8al 8er lma n7to fe session a7ot variables fun etc\n",
+        "operation->const variable placeholder"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PdNYqbQE3LSe",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
