DataTypes , Arithmatic Operations , Math Library , Strings and Files

--- a/pythonTutorials.ipynb
+++ b/pythonTutorials.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -248,6 +248,7 @@
       "convert string to set no duplication elements --> {'b', 'g', 'a', ' ', 'e', 'm', 'l', 'n', 'd', 'r'}\n",
       "split string from spaces --> ['merna', 'adel', 'ragab']\n",
       "split string from char e --> ['m', 'rna ad', 'l ragab']\n",
+      "split string by a specific max split  ['12', '34', '5', '6', '8', '86=4=6']\n",
       "string --> 1234567891234567889\n",
       "split string from first 5 number --> ('1234', '5', '67891234567889')\n",
       "split string from last 5 number --> ('1234567891234', '5', '67889')\n",
@@ -319,6 +320,9 @@
     "print(\"convert string to set no duplication elements -->\",set(a)) #no duplication\n",
     "print(\"split string from spaces -->\",a.split()) #fromspaces\n",
     "print(\"split string from char e -->\",a.split(\"e\")) #from char e\n",
+    "b=\"12=34=5=6=8=86=4=6\"\n",
+    "a=b.split(sep=\"=\", maxsplit=5)\n",
+    "print(\"split string by a specific max split \",a)\n",
     "c=\"1234567891234567889\"\n",
     "print(\"string -->\",c)\n",
     "print(\"split string from first 5 number -->\",c.partition(\"5\")) #from first 5 search for first 5 and split from right and left \n",
@@ -453,376 +457,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lists\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ahmed', 'ali', 'mohamed', 20, False, 36.3]\n",
-      "['ahmed', [1, 2, 3, 4, 5]]\n",
-      "ahmed\n",
-      "['p', 'y', 't', 'h', 'o', 'n']\n",
-      "t\n",
-      "p\n",
-      "[4, 5, 6, 7]\n",
-      "[1, 2, 5, 11, 7, 8, 9]\n",
-      "[['ahmed', [1, 2, 3, 4, 5]], ['p', 'y', 't', 'h', 'o', 'n'], [1, 2, 5, 11, 7, 8, 9]]\n",
-      "['ahmed', [1, 2, 3, 4, 5]]\n",
-      "ahmed\n",
-      "1\n",
-      "[1, 2, 3, 4, 5, 7, 8, 9]\n",
-      "[1, 2, 5, 7, 8, 9]\n",
-      "[2, 5, 7, 8, 9]\n",
-      "[2, 5, 7, 8, 9, 1, 2, 3, 4, 5, 6]\n",
-      "[2, 5, 7, 8, 9, 1, 2, 3, 4, 5, 6, 2, 5, 7, 8, 9, 1, 2, 3, 4, 5, 6, 2, 5, 7, 8, 9, 1, 2, 3, 4, 5, 6]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "100\n",
-      "\n",
-      "\n",
-      "[[0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0]]\n",
-      "10\n",
-      "45\n",
-      "9 1\n",
-      "[3, 4, 6, 6, 8, 99]\n",
-      "[4, 6, 8, 3, 6, 99]\n",
-      "[3, 4, 6, 6, 8, 99]\n",
-      "[99, 8, 6, 6, 4, 3]\n",
-      "[('F', 9), ('Cl', 17), ('Br', 35), ('I', 53), ('At', 85)]\n",
-      "[('At', 85), ('I', 53), ('Br', 35), ('Cl', 17), ('F', 9)]\n",
-      "['12', '34', '5', '6', '8', '86=4=6']\n",
-      "True\n",
-      "[3, 4, 6, 6, 8, 99, '12', '34', '5', '6', '8', '86=4=6']\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 0]\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 2]\n",
-      "1\n",
-      "5\n",
-      "True\n",
-      "None\n",
-      "[2, 0, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
-      "range(0, 20)\n",
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
-      "[0, 1, 8, 27, 64, 125, 216, 343, 512, 729, 1000, 1331]\n",
-      "[(1, 3), (1, 4), (2, 3), (2, 1), (2, 4), (3, 1), (3, 4)]\n",
-      "[[0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0]]\n",
-      "1\n",
-      "2\n",
-      "4\n",
-      "[1, 2, 3, 4]\n",
-      "[1, 2, 11, 4]\n",
-      "1 apple\n",
-      "2 banana\n",
-      "3 grapes\n",
-      "4 pear\n",
-      "a1 b1\n",
-      "a2 b2\n",
-      "a3 b3\n",
-      "[('dave', 'B', 10), ('jane', 'B', 12), ('john', 'A', 15)]\n",
-      "[('john', 'A', 15), ('dave', 'B', 10), ('jane', 'B', 12)]\n",
-      "['hurry!', 'critical!!!', 'bla bla', 'alabama']\n"
-     ]
-    }
-   ],
-   "source": [
-    "from operator import itemgetter\n",
-    "from operator import methodcaller#shwayatoperations\n",
-    "a=[\"ahmed\",\"ali\",\"mohamed\",20,False,36.3] #different dataTypes can be modified ->List\n",
-    "b={\"ahmed\",\"mohamed\",20} #no duplication ->sets\n",
-    "c=(\"ali\",\"ahmed\",20) #cant be modified ->tuple\n",
-    "print(a)\n",
-    "f=[\"ahmed\",[1,2,3,4,5]] #list inlist\n",
-    "print(f)\n",
-    "print(f[0])\n",
-    "g=list(\"python\")\n",
-    "print(g)\n",
-    "print(g[2])\n",
-    "a,s,d,i,o,k=g\n",
-    "print(a)\n",
-    "l=[1,2,3,4,5,6,7,8,9]\n",
-    "print(l[3:7])\n",
-    "l[5]=11\n",
-    "l[2:4]=[]\n",
-    "print(l)\n",
-    "x=[f,g,l]\n",
-    "print(x)\n",
-    "print(x[0])\n",
-    "print(x[0][0])\n",
-    "print(x[0][1][0])\n",
-    "l=[1,2,3,4,5,6,7,8,9]\n",
-    "del l[5]\n",
-    "print(l)\n",
-    "del l[2:4]\n",
-    "print(l)\n",
-    "l.remove(1) #if iknow value\n",
-    "print(l)\n",
-    "k=[1,2,3,4,5,6]\n",
-    "h=l+k\n",
-    "print(h)\n",
-    "print(h*3) #3 times\n",
-    "a=[0]*100\n",
-    "print(a)\n",
-    "print(len(a))\n",
-    "print(\"\\n\")\n",
-    "b=[[0]*8]*10\n",
-    "print(b)\n",
-    "print(len(b))\n",
-    "l=[1,2,3,4,5,6,7,8,9]\n",
-    "print(sum(l))\n",
-    "print(max(l),min(l))\n",
-    "l=[4,6,8,3,6,99]\n",
-    "print(sorted(l))# not modified in list\n",
-    "print(l)\n",
-    "l.sort()\n",
-    "print(l)#list modified\n",
-    "b=sorted(l,reverse=True)\n",
-    "print(b)\n",
-    "c=[('At', 85), ('Br', 35), ('Cl', 17), ('F', 9), ('I', 53)]\n",
-    "c=sorted(c, key=lambda e: e[1])\n",
-    "print(c)\n",
-    "c=sorted(c,reverse=True, key=lambda e: e[1])\n",
-    "print(c)\n",
-    "b=\"12=34=5=6=8=86=4=6\"\n",
-    "a=b.split(sep=\"=\", maxsplit=5)\n",
-    "print(a)\n",
-    "d=(\"12\" in a)\n",
-    "print(d)\n",
-    "l.extend(a)\n",
-    "print(l)\n",
-    "li=[1,2,3,4,5]\n",
-    "lo=[6,7,8,9,0]\n",
-    "li.extend(lo)\n",
-    "print(li)\n",
-    "li.append(2)\n",
-    "print(li)#in the end\n",
-    "li.insert(0,11) #in index 0\n",
-    "print(li.count(1))\n",
-    "print(li.index(5))\n",
-    "print(5 in li)\n",
-    "print(li.reverse()) #modified\n",
-    "li.pop()\n",
-    "print(li)\n",
-    "li.pop(3)# delete index 3\n",
-    "a=range(20)\n",
-    "print(a)\n",
-    "b=list(a)\n",
-    "print(b)\n",
-    "a=range(3,11)\n",
-    "a=range(3,11,2)\n",
-    "y=[x**3 for x in range(12)] #important a3wad b range fe x\n",
-    "print(y)\n",
-    "y = list(map(lambda x : x**3 , range(12)))\n",
-    "f = [(x, y) for x in [1,2,3] for y in [3,1,4] if x != y] #kol 2 pairs m3 b3d tbadel w twafe2\n",
-    "print(f)\n",
-    "L = [[0 for i in range(5)] for j in range(7)]\n",
-    "print(L)#2d\n",
-    "x=iter([1,2,4])\n",
-    "print(next(x))\n",
-    "print(next(x))\n",
-    "print(next(x))\n",
-    "x=[1,2,3,4]\n",
-    "y=x\n",
-    "print(y)\n",
-    "x[2]=11\n",
-    "print(y)#yt8yarfe l atnen\n",
-    "y=x.copy()# hna lma a8yarfe wa7da l tanya mtt2srsh\n",
-    "my_list = ['apple', 'banana', 'grapes', 'pear']\n",
-    "for c, value in enumerate(my_list, 1):\n",
-    "    print(c, value) #counter \n",
-    "alist = ['a1', 'a2', 'a3']\n",
-    "blist = ['b1', 'b2', 'b3']\n",
-    "for a, b in zip(alist, blist):\n",
-    "    print (a, b) #kol 2 m3 b3d\n",
-    "student_tuples = [('john', 'A', 15),('jane', 'B', 12),('dave', 'B', 10),] #3wza artab 3la asas 7aga wa7da\n",
-    "print(sorted(student_tuples, key=itemgetter(2)))\n",
-    "print(sorted(student_tuples, key=itemgetter(1,2))) #3n tare2 1 w lw 2 zy b3d artab 3la asas 2\n",
-    "messages = ['critical!!!', 'hurry!', 'bla bla', 'alabama']\n",
-    "print (sorted(messages, key = methodcaller( 'count', 'a'))) # artab 3la asasa a2al tkrar l 7arf a\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Tuples\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(8, 2, 4, 7)\n",
-      "[1, 2, 3, 4, 5, 6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "m=(1,2,3,4,5,6)# mesh hynfa3 a8yarfeha aw a3ml delete\n",
-    "s={2,4,7,8}\n",
-    "#nfs l functions fe lists lakan ay 7aga btmodify la wla a3rf a8ar element\n",
-    "c=tuple(s)\n",
-    "print(c)\n",
-    "f=1,2,3,4,5,6 #by default tuples\n",
-    "d=list(f)\n",
-    "print(d)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Sets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1, 2, 3, 4, 5, 23}\n",
-      "[1, 2, 3, 4, 5, 23]\n",
-      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19}\n",
-      "{1, 2, 3, 4, 5, 6}\n",
-      "{1, 2, 3, 4, 5, 6}\n",
-      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19}\n",
-      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19}\n",
-      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19}\n",
-      "{1, 2, 3, 4, 5, 6}\n",
-      "{1, 2, 3, 4, 5, 6}\n",
-      "{0, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19}\n"
-     ]
-    }
-   ],
-   "source": [
-    "a={1,2,3,4,5,1,23,4} #no duplication w sort automatic lw string mesh sort\n",
-    "print(a) #hint mesh dyman l tarteb s7\n",
-    "d={'a','j','g'}\n",
-    "f=list(a)\n",
-    "print(f)\n",
-    "h={n for n in range (20)}\n",
-    "print(h)\n",
-    "a={x**3 for x in range(20)}\n",
-    "a={6,5,4,3,2,1,5}\n",
-    "print(a) #tarteb byb2a mesh s7\n",
-    "print(a or h) #print eli feha 3anaser as8ar\n",
-    "print(a and h) #print el 3nasr kter\n",
-    "print(a|h) #union w yshel l mwgod fe l atnen\n",
-    "print(a.union(h))# same\n",
-    "print(a& h) #l moshtrak\n",
-    "print(a.intersection(h))\n",
-    "print(a^h) # lmtkrr mesh hy3rdo\n",
-    "print(a-h)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100, 11: 121, 12: 144, 13: 169, 14: 196, 15: 225, 16: 256, 17: 289, 18: 324, 19: 361}\n",
-      "1\n",
-      "True\n",
-      "True\n",
-      "10\n",
-      "55\n",
-      "{'merna': 10, 'karim': 2, 'shahen': 3, 'mayar': 4, 'mohamed': 60}\n",
-      "{'karim': 2, 'shahen': 3, 'mayar': 4, 'mohamed': 60}\n",
-      "{}\n",
-      "20\n",
-      "{'merna': 10, 'karim': 2, 'shahen': 3, 'mayar': 4}\n",
-      "{1: None, 2: None, 3: None, 4: None, 5: None}\n",
-      "{'merna': (1, 2)}\n",
-      "dict_keys(['merna'])\n",
-      "dict_values([(1, 2)])\n",
-      "2\n",
-      "{}\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-2067b064fff3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdic2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     39\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
-     ]
-    }
-   ],
-   "source": [
-    "d={'merna':1,'karim':2,'shahen':3,'mayar':4}\n",
-    "f={n:n**2 for n in range(20)}\n",
-    "print(f)\n",
-    "print(d['merna'])\n",
-    "d['merna']=10\n",
-    "dic=d.copy()\n",
-    "s=('merna' in d)\n",
-    "print(s)\n",
-    "print((10 in d.values())) #search in values\n",
-    "print(d.get('merna'))\n",
-    "print(d.get('mern',55)) #lw mfesh mern ytl3 55\n",
-    "d['mohamed']=60 # adding\n",
-    "print(d)\n",
-    "del (d['merna'])\n",
-    "print(d)\n",
-    "d.clear()\n",
-    "print(d)\n",
-    "del(d)# atmsa7 5ales\n",
-    "print(len(f))\n",
-    "print(dic)\n",
-    "set1={1,2,3,4,5}\n",
-    "dic=dict.fromkeys(set1) # a7walha l dic\n",
-    "print(dic)\n",
-    "\n",
-    "#tuple=tuple(dic.keys())\n",
-    "#print(tuple)\n",
-    "#all=set(f.items())\n",
-    "#print(all)\n",
-    "dic2={'merna':(1,2)} #values of tuples\n",
-    "print(dic2)\n",
-    "print(dic2.keys())\n",
-    "print(dic2.values())\n",
-    "print(dic2['merna'][1])\n",
-    "del(dic2['merna'])\n",
-    "print(dic2)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Control Operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -860,9 +500,9 @@
       "merna\n",
       "ali\n",
       "ahmed\n",
-      "('merna', 1)\n",
-      "('ali', 2)\n",
-      "('ahmed', 3)\n",
+      "items ('merna', 1)\n",
+      "items ('ali', 2)\n",
+      "items ('ahmed', 3)\n",
       "merna   1\n",
       "ali   2\n",
       "ahmed   3\n",
@@ -931,7 +571,7 @@
     "for i in dic:\n",
     "    print(i)\n",
     "for i in dic.items():\n",
-    "    print(i)\n",
+    "    print(\"items\",i)\n",
     "for i,j in dic.items():\n",
     "    print(i,\" \",j)\n",
     "for x,y in enumerate (list): #yrkam llist\n",
@@ -952,23 +592,6 @@
     "a = [3*x for x in [y**2 for y in range(10)]] # solve 0 1 4 8 then *3\n",
     "print(a)\n",
     "#while\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "name = input()"
    ]
   },
   {
