Statistics library , Random library , Functions ,Classes

--- a/PythonTitorials 2.ipynb
+++ b/PythonTitorials 2.ipynb
@@ -9,20 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "2.18978102189781\n",
-      "5\n",
-      "4.0\n",
-      "3\n",
-      "3\n",
-      "11.720024503343597\n"
+      "mean of the list 3\n",
+      "harmonic mean 2.18978102189781\n",
+      "median 5\n",
+      "median f2 4.0\n",
+      "the lowest median 3\n",
+      "highest occurence 3\n",
+      "standed deviation 11.720024503343597\n"
      ]
     }
    ],
@@ -30,21 +30,21 @@
     "import statistics as st\n",
     "b=[1,2,3,4,5]\n",
     "a=st.mean(b) #average\n",
-    "print(a) \n",
+    "print(\"mean of the list\",a) \n",
     "c=st.harmonic_mean(b)\n",
-    "print(c)\n",
+    "print(\"harmonic mean\",c)\n",
     "f=[5,3,7,8,0] #eliife nos b3d sort odd\n",
     "f2=[5,3,7,8,0,1] # even agma3 el atnen eliife nos w a2sam 3la 2\n",
     "c=st.median(f)\n",
-    "print(c)\n",
+    "print(\"median\",c)\n",
     "c=st.median(f2)\n",
-    "print(c)\n",
+    "print(\"median f2\",c)\n",
     "c=st.median_low(f2) #ya5od l a2al\n",
-    "print(c)\n",
+    "print(\"the lowest median\",c)\n",
     "a=[1,2,3,4,5,1,2,3,45,4,5,3,3]\n",
-    "print(st.mode(a)) #aktr rkam atkrr\n",
+    "print(\"highest occurence\",st.mode(a)) #aktr rkam atkrr\n",
     "d=st.stdev(a)\n",
-    "print(d)"
+    "print(\"standed deviation\",d)"
    ]
   },
   {
@@ -56,51 +56,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "0.8591765850664496\n",
-      "5.121073120841451\n",
-      "11\n",
-      "37\n",
-      "2\n",
-      "w\n",
-      "[130, 72, 24, 75, 8, 105, 127, 71, 42, 70]\n",
-      "[140.89146709825064, 90.14836975395542, 34.02166858367954, 79.66181913449265, 11.059769460556687, 115.06071058909929, 133.53355904245507, 81.02632024220398, 57.906536983534394, 73.32521609572133]\n",
-      "[1, 5, 3, 4, 2]\n"
+      "random number between 1 to 15 3\n",
+      "random fraction number between 0 to 1 0.5554032371015916\n",
+      "random fraction number between 1 to 19 2.0577964549424945\n",
+      "random number between 1 to 50 46\n",
+      "random odd number between 1 to 50 35\n",
+      "list [4, 3, 2, 6, 3]\n",
+      "select random number from a list 3\n",
+      "string  sweet\n",
+      "select random char from string w\n",
+      "select 10 random numbers from 1 to 199 [143, 112, 12, 154, 150, 108, 117, 48, 162, 19]\n",
+      "select 10 random fraction numbers from 1 to 199 [161.3242717069233, 128.49322896007243, 24.830340533581357, 158.15003811670246, 164.95273886962642, 123.35302995835184, 127.1218658166483, 58.96962341360389, 168.86456225320217, 20.144061701305436]\n",
+      "shuffle the list [3, 4, 1, 5, 2]\n"
      ]
     }
    ],
    "source": [
     "import random as rn\n",
     "a=rn.randint(1,15)\n",
-    "print(a)\n",
+    "print(\"random number between 1 to 15\",a)\n",
     "a=rn.random()\n",
-    "print(a) #kasr ma ben 0,1\n",
+    "print(\"random fraction number between 0 to 1\",a) #kasr ma ben 0,1\n",
     "a=rn.uniform(1,20)#kasr ma ben 1,19\n",
-    "print(a)\n",
+    "print(\"random fraction number between 1 to 19\",a)\n",
     "a=rn.randrange(1,50)\n",
-    "print(a)\n",
+    "print(\"random number between 1 to 50\",a)\n",
     "a=rn.randrange(1,50,2) #fardy bs\n",
-    "print(a)\n",
+    "print(\"random odd number between 1 to 50\",a)\n",
     "h=[4,3,2,6,3]\n",
+    "print(\"list\",h)\n",
     "a=rn.choice(h)\n",
-    "print(a)\n",
+    "print(\"select random number from a list\",a)\n",
     "a=\"sweet\"\n",
+    "print(\"string \",a)\n",
     "y=rn.choice(a)\n",
-    "print(y)\n",
+    "print(\"select random char from string\",y)\n",
     "f=rn.sample(range(200),10)#sample kol mra 10 arkam mn 0 l 199\n",
-    "print(f)\n",
+    "print(\"select 10 random numbers from 1 to 199\",f)\n",
     "s=[i+rn.uniform(1,20) for i in f ]\n",
-    "print(s)\n",
+    "print(\"select 10 random fraction numbers from 1 to 199\",s)\n",
     "f=[1,2,3,4,5]\n",
     "rn.shuffle(f)\n",
-    "print(f)"
+    "print(\"shuffle the list\",f)"
    ]
   },
   {
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,10 +163,10 @@
       "-- It's a stiff !\n",
       "14\n",
       "125\n",
-      "1\n",
-      "5\n",
-      "25\n",
-      "125\n",
+      "first function  1\n",
+      "second function  5\n",
+      "third function  25\n",
+      "fourth function  125\n",
       "[0, 2, 4, 6, 8]\n",
       "[1, 3, 5, 7, 9]\n",
       "square list [0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n",
@@ -184,42 +188,59 @@
    ],
    "source": [
     "\n",
-    "def find_avg(*numbers):\n",
+    "def find_avg(*numbers): #arkam kter\n",
     "  sum = 0\n",
     "  for i in numbers :\n",
     "    sum += i\n",
     "  print (\"average is \",sum/(len(numbers)))\n",
     "  print (numbers)\n",
     "find_avg(2,3)\n",
+    "\n",
     "find_avg(2,3,4)\n",
+    "\n",
     "find_avg(1,2,3,4,5,6,7,8,9,10)\n",
+    "\n",
     "def avg_of_two(a,b):\n",
     "  print ((a+b)/2)\n",
+    "\n",
     "def avg_of_three(a,b,c):\n",
     "  print ((a+b+c)/3)\n",
+    "\n",
     "var1 = (1,2)\n",
+    "\n",
     "avg_of_two(*var1)\n",
+    "\n",
     "var2 = (1,2,3)\n",
+    "\n",
     "avg_of_three(*var2)\n",
+    "\n",
     "def test_var_args(f_arg, *argv):\n",
     "    print (\"first normal arg:\", f_arg)\n",
     "    for arg in argv:\n",
     "        print (\"another arg through *argv :\", arg)\n",
     "\n",
     "test_var_args('ahmed','mohamed','mona','sameh') #take paramter as args\n",
+    "\n",
     "def print_values(**values):\n",
     "  print (values)\n",
     "print_values(one = 1, two = 2)\n",
+    "\n",
     "def print_values(**values):\n",
     "  for key, value in values.items():\n",
     "    print(\"{} = {}\".format(key,value))\n",
+    "    \n",
     "print_values(one = 1,two = 2,three = 3,four = 4,five = 5)\n",
+    "\n",
     "def avg_of_two(a,b=5):#defalt value\n",
     "  print ((a+b)/2)\n",
+    "\n",
     "def avg_of_three(a,b,c):\n",
     "  print ((a+b+c)/3)\n",
+    "\n",
     "var1 = {'a':1,'b':2}\n",
+    "\n",
     "avg_of_two(**var1)\n",
+    "\n",
     "var2 = {'a':1,'b':2,'c':3}\n",
     "avg_of_three(**var2)\n",
     "def test_args_kwargs(arg1, arg2, arg3):\n",
@@ -251,18 +272,18 @@
     "    \n",
     "gg()\n",
     "print (xx)\n",
-    "powers = lambda x,y : x**y #shakl mo5tar aktab beh function bs ll baseta bs\n",
+    "powers = lambda x,y : x**y #shakl mo5tar aktab beh function bs ll baseta bs important lambda:parameters : code\n",
     "\n",
     "print (powers(5,3))\n",
     "\n",
     "powers = [lambda x: 1,lambda x: x,lambda x: x**2,lambda x: x**3] #list of functions\n",
     "\n",
-    "print(powers[0](5))  \n",
-    "print(powers[1](5))  \n",
-    "print(powers[2](5))  \n",
-    "print(powers[3](5))  \n",
+    "print(\"first function \",powers[0](5))  \n",
+    "print(\"second function \",powers[1](5))  \n",
+    "print(\"third function \",powers[2](5))  \n",
+    "print(\"fourth function \",powers[3](5))  \n",
     "mylist = [0,1,2,3,4,5,6,7,8,9]\n",
-    "evennumber = list(filter(lambda x: x % 2 == 0 , mylist   )) #a3ml list t3ml filter l list de b condition mo3yan\n",
+    "evennumber = list(filter(lambda x: x % 2 == 0 , mylist   )) #a3ml list t3ml filter l list de b condition mo3yan(function)\n",
     "oddnumber = list(filter(lambda x: x % 2 == 1 , mylist   ))\n",
     "print (evennumber)\n",
     "print (oddnumber)\n",
@@ -296,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,10 +326,10 @@
      "text": [
       "10\n",
       "12\n",
-      "white\n",
-      "green\n",
-      "1600\n",
-      "125000\n",
+      "color for object 1  white\n",
+      "color for object 2 green\n",
+      "power 2 from class calc 1600\n",
+      "power 3 from class calc 125000\n",
       "50.0\n"
      ]
     }
@@ -325,18 +346,18 @@
     "    def __init__(self, color):\n",
     "        self.color = color\n",
     "    \n",
-    "volvo = car('white')\n",
+    "volvo = car('white') #constructor\n",
     "nissan = car('green')\n",
-    "print(volvo.color)\n",
-    "print(nissan.color)\n",
+    "print(\"color for object 1 \",volvo.color)\n",
+    "print(\"color for object 2\",nissan.color)\n",
     "class calc : \n",
     "    def __init__(self,p2,p3) :\n",
     "        self.power2 = p2**2\n",
     "        self.power3 = p3**3\n",
     "    \n",
     "a = calc(40,50)\n",
-    "print(a.power2)\n",
-    "print(a.power3)\n",
+    "print(\"power 2 from class calc\",a.power2)\n",
+    "print(\"power 3 from class calc\",a.power3)\n",
     "class d :  \n",
     "    def __init__(self,nn,p2 = 10 ,p3 = 100) : \n",
     "        \n",
