Lists , Sets , Tuples and Dictionary

--- a/Collections.ipynb
+++ b/Collections.ipynb
@@ -374,6 +374,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=int(input())\n",
+    "l=[input() for i in range(x)]\n",
+    "print(l) \n",
+    "y=int(input())\n",
+    "l2=[input() for j in range(y)]\n",
+    "print(l2) \n",
+    "answer=[]\n",
+    "for k2 in l2:\n",
+    "    print(k2)\n",
+    "    answer.append(l.count(k2))\n",
+    "for t in answer:\n",
+    "    print(t)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
